[tool.poetry]
name = "selenium-python-helium"
version = "3.0.6"
description = ""
authors = ["IgnisDa <ignisda2002@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.0"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]
Sphinx = "^3.2.1"
sphinx-rtd-theme = "^0.5.0"
flake8 = "^3.8.3"
autopep8 = "^1.5.4"
psutil = "^5.7.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
