[tool.poetry]
name = "helium"
version = "3.0.6"
description = "Lighter browser automation based on Selenium."
authors = ["mherrmann <michael+removethisifyouarehuman@herrmann.io>"]
repository = "https://github.com/mherrmann/helium"
homepage = "https://github.com/mherrmann/helium"
classifiers = [
    "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Topic :: Software Development :: Testing",
        "Topic :: Software Development :: Libraries",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3.5",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Operating System :: Microsoft :: Windows",
        "Operating System :: POSIX :: Linux",
        "Operating System :: MacOS :: MacOS X"
]

[tool.poetry.dependencies]
python = "^3.5"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]
Sphinx = "^3.2.1"
sphinx-rtd-theme = "^0.5.0"
flake8 = "^3.8.3"
autopep8 = "^1.5.4"
psutil = "5.6.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
